feat: trait section update

--- a/book.toml
+++ b/book.toml
@@ -7,6 +7,8 @@ title = "Rust & Beyond: A Practical Exploration"
 
 [output.html]
 git-repository-url = "https://github.com/xixiaofinland/rust_beyond"
+additional-css = ["ferris.css"]
+additional-js = ["ferris.js"]
 
 [output.html.playground]
-editable = true
+editable = false
